# scbox-app

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: build-windows.yml  ci.yml  release.yml
docs/: AUTO_UPDATE.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  editor.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: builds.rs  legacy_seed_terran.json  lib.rs  main.rs  sc2.rs  settings.rs  tts.rs  updater.rs
src/components/: BuildEditor.css  BuildEditor.tsx  BuildJsonEditor.tsx  BuildJsonPreview.tsx  BuildTransferPanel.css  BuildTransferPanel.tsx  Dashboard.tsx  DiagnosticPanel.css  DiagnosticPanel.tsx  MainWindow.tsx  SettingsPanel.css  SettingsPanel.tsx
src/hooks/: useAppIcon.test.ts  useAppIcon.ts  useAppName.test.ts  useAppName.ts  useAppVersion.test.ts  useAppVersion.ts  useApplyTheme.test.ts  useApplyTheme.ts  useBuildOrderVoice.test.ts  useBuildOrderVoice.ts  useBuildOrders.test.ts  useBuildOrders.ts  useConnectionDiagnostic.test.ts  useConnectionDiagnostic.ts  useGameSnapshot.test.ts  useGameSnapshot.ts  useInterpolatedClock.test.ts  useInterpolatedClock.ts  useRecurringCues.test.ts  useRecurringCues.ts  useSettings.test.ts  useSettings.ts  useUpdateCheck.test.ts  useUpdateCheck.ts  useUpdateToast.test.ts  useUpdateToast.ts  useVoiceCapability.test.ts  useVoiceCapability.ts  useWindowControls.test.ts  useWindowControls.ts
src/lib/: buildFilename.test.ts  buildFilename.ts  buildTransfer.ts  (+26 more)
(+391 files in other folders)
