[package]
name = "scbox-app"
version = "0.1.0"
description = "SC2 build-order voice assistant (6119 auto-sync)"
authors = ["NoahCode"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scbox_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["time"] }
tts = "0.26"
base64 = "0.22"

